--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -11,5 +11,15 @@
         android:title="@string/action_settings"
         app:showAsAction="never">
     </item>
+    <item
+        android:id="@+id/action_details"
+        android:title="@string/action_details"
+        app:showAsAction="ifRoom">
+    </item>
+    <item
+        android:id="@+id/action_refresh"
+        android:title="@string/action_refresh"
+        app:showAsAction="ifRoom">
 
+    </item>
 </menu>
