--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,9 @@
     tools:context=".MainActivity">
 
     <include
-        android:id="@+id/tool_bar"
-        layout="@layout/tool_bar">
+        android:id="@+id/login_button"
+        layout="@layout/login_button">
+
     </include>
 
 </RelativeLayout>
