--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,11 +2,10 @@
 <fragment
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:name="ccom.example.android.boemiaapp.app"
+    android:name="com.example.android.boemiaapp.app.LoginFragment"
     android:id="@+id/login_fragment"
     tools:layout="@layout/login_button"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".app.MainActivity"
-    >
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center">
 </fragment>
