--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,4 +6,6 @@
     android:orientation="vertical"
     android:gravity="center">
 
+    <include layout="@layout/fragment_main"/>
+
 </LinearLayout>
