Location - Set Up

--- a/app/src/main/res/layout/list_item_location.xml
+++ b/app/src/main/res/layout/list_item_location.xml
@@ -11,7 +11,7 @@
         android:id="@+id/list_item_location_name_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pampa Burger"
+        android:text="@string/location_name_text_view"
         android:textSize="16sp"
         android:textColor="@android:color/black"
         android:layout_marginLeft="8dp"
@@ -22,7 +22,7 @@
         android:id="@+id/list_item_location_address_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Avenida Ipiranga"
+        android:text="@string/location_address_text_view"
         android:textSize="16sp"
         android:textColor="@android:color/black"
         android:layout_marginLeft="8dp"
