--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,15 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/location_container"
-    tools:context="app.LocationActivity">
-
+    tools:context=".app.LoginActivity">
 
     <fragment
-        android:name="com.example.android.boemiaapp.app.LocationFragment"
-        android:id="@+id/location_fragment"
+        android:name="com.example.android.boemiaapp.app.LoginFragment"
+        android:id="@+id/fb_login_fragment"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        tools:layout="@layout/fragment_location" />
+        tools:layout="@layout/fragment_login" />
 
 </LinearLayout>
