--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,13 +13,7 @@
     </item>
     <item
         android:id="@+id/action_details"
-        android:title="@string/action_details"
+        android:title="@string/action_login"
         app:showAsAction="ifRoom">
-    </item>
-    <item
-        android:id="@+id/action_refresh"
-        android:title="@string/action_refresh"
-        app:showAsAction="ifRoom">
-
     </item>
 </menu>
