--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".app.LocationActivity">
+        tools:context=".app.MainActivity">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
