--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.android.boemiaapp.app.MainFragment" >
+    tools:context=".app.LoginFragment" >
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/fb_login_button"
