--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,8 +12,8 @@
         app:showAsAction="never">
     </item>
     <item
-        android:id="@+id/action_details"
+        android:id="@+id/action_login"
         android:title="@string/action_login"
-        app:showAsAction="ifRoom">
+        app:showAsAction="never">
     </item>
 </menu>
