--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -43,5 +43,20 @@
             android:src="@drawable/ic_my_location_black_48dp"
             app:backgroundTint="@color/colorPrimaryDark"/>
 
+        <TextView
+            android:id="@+id/recyclerview_location_empty"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_anchor="@+id/location_recycler_view"
+            app:layout_anchorGravity="fill"
+            android:gravity="center_horizontal"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingEnd="@dimen/activity_horizontal_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingStart="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:text="@string/empty_location_list" />
+
     </android.support.design.widget.CoordinatorLayout>
 </FrameLayout>
