--- a/app/src/main/res/layout/list_item_location.xml
+++ b/app/src/main/res/layout/list_item_location.xml
@@ -15,8 +15,7 @@
         android:textSize="16sp"
         android:textColor="@android:color/black"
         android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:paddingBottom="4dp"/>
+        android:layout_marginStart="8dp" />
 
     <TextView
         android:id="@+id/list_item_location_address_textview"
@@ -27,5 +26,5 @@
         android:textColor="@android:color/black"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
-        android:paddingTop="4dp"/>
+        android:paddingBottom="12dp"/>
 </LinearLayout>
