--- a/app/src/main/res/layout/rating_alert_dialog.xml
+++ b/app/src/main/res/layout/rating_alert_dialog.xml
@@ -24,10 +24,11 @@
         android:padding="6dp"/>
 
     <RatingBar
-        android:id="@+id/beer_rating_bar"
+        android:id="@+id/alert_dialog_rating_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:paddingTop="6dp"
-        android:numStars="5"/>
+        android:numStars="5"
+        android:stepSize="0.1"/>
 </LinearLayout>
