--- a/app/src/main/res/layout/list_item_location.xml
+++ b/app/src/main/res/layout/list_item_location.xml
@@ -46,5 +46,7 @@
         android:layout_marginStart="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="?android:ratingBarStyleSmall"/>
+        style="?android:ratingBarStyleSmall"
+        android:isIndicator="true"
+        android:stepSize="0.1"/>
 </LinearLayout>
