--- a/app/src/main/res/layout/rating_alert_dialog.xml
+++ b/app/src/main/res/layout/rating_alert_dialog.xml
@@ -30,5 +30,6 @@
         android:layout_gravity="center_horizontal"
         android:paddingTop="6dp"
         android:numStars="5"
-        android:stepSize="0.1"/>
+        android:stepSize="1.0"
+        style="?android:ratingBarStyle"/>
 </LinearLayout>
