--- a/app/src/main/res/layout/list_item_location.xml
+++ b/app/src/main/res/layout/list_item_location.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="?android:attr/listPreferredItemHeight"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:background="?android:selectableItemBackground">
 
     <TextView
         android:id="@+id/list_item_location_name_textview"
