--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/location_container"
-    tools:context=".app.MainActivity">
+    tools:context=".activity.MainActivity">
 
 
     <fragment
